Add task 'Allow 'www-data' group to have passwordless sudo'

--- a/templates/drupal.test.conf.j2
+++ b/templates/drupal.test.conf.j2
@@ -4,7 +4,7 @@
     ServerAlias www.{{ domain }}.test
     DocumentRoot {{ drupal_core_path }}
     <Directory "{{ drupal_core_path }}">
-        Options FollowSymlinks Indexes
+        Options FollowSymLinks Indexes
         AllowOverride All
     </Directory>
 </VirtualHost>
